--- a/helm/cpechart/values.yaml
+++ b/helm/cpechart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: Luislopal/vnf-img
+  repository: luichu/vnf-img
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
