--- a/cpechart/templates/service.yaml
+++ b/cpechart/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "test.fullname" . }}
+  name: {{ include "cpechart.fullname" . }}
   labels:
-    {{- include "test.labels" . | nindent 4 }}
+    {{- include "cpechart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "test.selectorLabels" . | nindent 4 }}
+    {{- include "cpechart.selectorLabels" . | nindent 4 }}
