--- a/cpechart/templates/serviceaccount.yaml
+++ b/cpechart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "test.serviceAccountName" . }}
+  name: {{ include "cpechart.serviceAccountName" . }}
   labels:
-    {{- include "test.labels" . | nindent 4 }}
+    {{- include "cpechart.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
